Funeral of the Dead Butterflies' page

--- a/abnoinfo/Bloodbath.html
+++ b/abnoinfo/Bloodbath.html
@@ -105,7 +105,7 @@
       
       <p>{abnoName} is fairly bulky, being near impervious to Slash attacks and having boosted rolls for its block dice. There is also a chance for it to roll relatively high with '<span class="hardcover">Depression</span>' which inflicts the opponent with {LoR SE d Paralysis}, further crippling their offensive capabilities.</p>
 
-      <p>'<span class="hardcover">Pale Hands</span>' will allow {abnoName} to Stagger its target should all 3 attacks hit. Should the Librarian get Staggered from this attack, the eyes in the background will open as well.</p>
+      <p>'<span class="hardcover">Pale Hands</span>' will allow {abnoName} to Stagger its target should all 3 attacks hit. Should the librarian get Staggered from this attack, the eyes in the background will open as well.</p>
 
       <h5 class="profile-subheader">Decks & Pages</h5>
 
