--- a/abnoinfo/Blue Star.html
+++ b/abnoinfo/Blue Star.html
@@ -107,7 +107,7 @@
 
       <p>In its book, {abnoName} does not directly participate in combat. It instead remains in the background, while the Shrine to the {abnoName} acts as its surrogate in the fight, though it cannot be attacked either. The main enemies in the encounter are the Worshippers of the {abnoName}. Four Worshippers participate in the fight, though every time one dies, they are replaced by a new Worshipper at the start of the next turn.</p>
       
-      <p>Every character that becomes Staggered is sucked into the {abnoName} and dies. The Abnormality is suppressed once 10 characters are killed in this fashion, regardless of whether they are a Librarian or a Worshipper.</p>
+      <p>Every character that becomes Staggered is sucked into the {abnoName} and dies. The Abnormality is suppressed once 10 characters are killed in this fashion, regardless of whether they are a librarian or a Worshipper.</p>
 
       <p>The Worshippers' attacks focus on inflicting Stagger damage to opponents, while recovering their own Stagger Resist. If a Woshipper has a low amount of Stagger Resist, they perform a kamikaze attack, throwing themself into the {abnoName} while changing the target's Stagger resistances to "Fatal". This death does not count towards the required 10.</p>
 
@@ -155,8 +155,8 @@
                   <li><b>Sacred?</b>: Cannot be targeted. Immune to status ailments.</li>
                   <li><b>Sound of a Star</b>: Starting with the third Scene, the Shrine to the Blue Star uses a Mass Attack page every 3 Scenes.</li>
                   <li><b>Into the Star’s Embrace</b>: If a character is Staggered, kill them and lose 10% of Max HP.</li>
-                  <li><b>Blue Gleam of Hope</b>: If a Worshipper dies from the effect of 'Into the Star’s Embrace', all Librarians recover Stagger Resist, and all Worshippers take Stagger damage.</li>
-                  <li><b>Blue Glimmer of Despair</b>: If a Librarian dies from the effect of 'Into the Star’s Embrace', all Worshippers recover Stagger Resist, and all Librarians take Stagger damage.</li>
+                  <li><b>Blue Gleam of Hope</b>: If a Worshipper dies from the effect of 'Into the Star’s Embrace', all librarians recover Stagger Resist, and all Worshippers take Stagger damage.</li>
+                  <li><b>Blue Glimmer of Despair</b>: If a librarian dies from the effect of 'Into the Star’s Embrace', all Worshippers recover Stagger Resist, and all librarians take Stagger damage.</li>
               </div>
             </div>
           </div>
@@ -180,7 +180,7 @@
                   <div class="lor-page-text">
                     {Blunt Dice} {dmgroll 3 7}<br>
                     {Blunt Dice} {dmgroll 3 6}<br>
-                    {Block Dice} {defroll 3 6}<br>
+                    {Block Dice} {defroll 3 6}
                   </div>
                 </div>
               </div>
@@ -196,7 +196,7 @@
                   </div>
                   <div class="lor-page-text">
                     {Blunt Dice} {dmgroll 3 6}<br>
-                    {Blunt Dice} {dmgroll 7 9} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">Inflict 3 {LoR SE d Paralysis} next Scene</span><br>
+                    {Blunt Dice} {dmgroll 7 9} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">Inflict 3 {LoR SE d Paralysis} next Scene</span>
                   </div>
                 </div>
               </div>
@@ -229,7 +229,7 @@
                   </div>
                   <div class="lor-page-text">
                     {Pierce Dice} {dmgroll 6 8} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">Deal 3 Stagger damage</span><br>
-                    {Pierce Dice} {dmgroll 5 8} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">Deal 3 Stagger damage</span><br>
+                    {Pierce Dice} {dmgroll 5 8} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">Deal 3 Stagger damage</span>
                   </div>
                 </div>
               </div>
