--- a/abnoinfo/Child of the Galaxy.html
+++ b/abnoinfo/Child of the Galaxy.html
@@ -30,10 +30,10 @@
 
       <h5 class="profile-subheader">Managerial Guidelines</h5>
       <ul>
-        <li>When an employee finished the work, they received a Token of Friendship. This constantly healed the emplyee's HP and SP relative to {abnoName}'s Qliphoth Counter.</li>
-        <li>When an employee with with a Token of Frienship finished the work, the Qliphoth Counter increased.</li>
-        <li>When an employee with with a Token of Frienship worked with another Abnormality, they received damage relative to {abnoName}'s Qliphoth Counter, which then decreased.</li>
-        <li>When an employee with with a Token of Frienship died, the Qliphoth Counter decreased by 4.</li>
+        <li>When an employee finished the work, they received a Token of Friendship. This constantly healed the employee's HP and SP relative to {abnoName}'s Qliphoth Counter.</li>
+        <li>When an employee with a Token of Friendship finished the work, the Qliphoth Counter increased.</li>
+        <li>When an employee with a Token of Friendship worked with another Abnormality, they received damage relative to {abnoName}'s Qliphoth Counter, which then decreased.</li>
+        <li>When an employee with a Token of Friendship died, the Qliphoth Counter decreased by 4.</li>
         <li>When the Qliphoth Counter reached 0, all employees with a Token of Friendship died.</li>
       </ul>
 
