--- a/abnoinfo/Forsaken Murderer.html
+++ b/abnoinfo/Forsaken Murderer.html
@@ -94,7 +94,7 @@
 
       <p>{abnoName} employs a simple strategy where it uses '<span class="hardcover">Chained Wrath</span>' for 2 turns, building up {Light}, so it can use '<span class="hardcover">Metallic Ringing</span>' and overpower its opponent. The Power of the dice on '<span class="hardcover">Metallic Ringing</span>' are fairly high for how early the Abnormality is encountered, and it is unlikely the target will be able to match them. Additionally, its passive 'Wrath' makes it easier for {abnoName} to Stagger its target, allowing it to use '<span class="hardcover">Metallic Ringing</span>' the very next turn as well.</p>
 
-      <p>Inflicting any sort of status effect onto {abnoName} activates its passive 'Fear'. This causes the Power of all its dice to drastically drop, allowing the Librarian to easily deal with its '<span class="hardcover">Metallic Ringing</span>'. The activation of 'Fear' is marked by {abnoName} breathing heavily.</p>
+      <p>Inflicting any sort of status effect onto {abnoName} activates its passive 'Fear'. This causes the Power of all its dice to drastically drop, allowing the librarian to easily deal with its '<span class="hardcover">Metallic Ringing</span>'. The activation of 'Fear' is marked by {abnoName} breathing heavily.</p>
 
       <h5 class="profile-subheader">Decks & Pages</h5>
 
