--- a/abnoinfo/Fragment of the Universe.html
+++ b/abnoinfo/Fragment of the Universe.html
@@ -35,7 +35,7 @@
       <h5 class="profile-subheader">Managerial Guidelines</h5>
       <ul>
         <li>When the work result was {Normal}, the Qliphoth Counter decreased with a normal probability.</li>
-        <li>When the work result was {Bad}, the Qliphoth Counter decreased with with a high probability.</li>
+        <li>When the work result was {Bad}, the Qliphoth Counter decreased with a high probability.</li>
         <li>When the employee panicked during the work, the Qliphoth Counter decreased.</li>
       </ul>
 
@@ -120,7 +120,7 @@
 
       <p>{abnoName}'s strategy focuses on Staggering its target and it has a few utilities that aid it in this objective. Firstly, its passive 'Incomprehensible' means it deals twice the amount of Stagger damage from all of its attacks. Additionally, if it is able to land a hit with '<span class="hardcover">Penetrate</span>', it will add a copy of '<span class="hardcover">Enlightenment</span>' to the target's hand. While the target has '<span class="hardcover">Enlightenment</span>', their maximum Stagger will be halved.</p>
       
-      <p>While having '<span class="hardcover">Enlightenment</span>' may seem like a negative, it also protects the Librarian from Fragment's '<span class="hardcover">Echoes from Beyond</span>' as it makes the attack deal 0 damage. It also provides a perfect block againt '<span class="hardcover">Penetrate</span>'.</p>
+      <p>While having '<span class="hardcover">Enlightenment</span>' may seem like a negative, it also protects the librarian from Fragment's '<span class="hardcover">Echoes from Beyond</span>' as it makes the attack deal 0 damage. It also provides a perfect block againt '<span class="hardcover">Penetrate</span>'.</p>
 
       <h5 class="profile-subheader">Decks & Pages</h5>
 
@@ -172,7 +172,7 @@
                     <span class="lor-page-stats">{Melee} | 0 {Light}</span>
                   </div>
                   <div class="lor-page-text">
-                    <i>(Given to Librarians)</i><br>
+                    <i>(Given to librarians)</i><br>
                     While in hand, decrease Max Stagger Resist by 50%<br>
                     {Block Dice} {defroll 8 8} 
                   </div>
