--- a/abnoinfo/Happy Teddy Bear.html
+++ b/abnoinfo/Happy Teddy Bear.html
@@ -95,9 +95,9 @@
 
       <p>{abnoName} appears as the second Abnormality on the {Floor of History}, unlocking {Awakening Nostalgic Embrace of the Old Days}, {Awakening Happy Memories}, and {Breakdown Display of Affection} after its suppression.</p>
 
-      <p>In its combat encounter, {abnoName} is no longer slouching on the floor but instead is standing up, eager to 'play' with the Librarians. Whenever a Librarian clashes with {abnoName}, it will lower the Cost of '<span class="hardcover">Nostalgic Embrace of the Old Days</span>' regardless of whether it won or lost the clash. This is marked by hearts appearing above its head the next turn accompanied by the sound of a music box.</p>
+      <p>In its combat encounter, {abnoName} is no longer slouching on the floor but instead is standing up, eager to 'play' with the librarians. Whenever a librarian clashes with {abnoName}, it will lower the Cost of '<span class="hardcover">Nostalgic Embrace of the Old Days</span>' regardless of whether it won or lost the clash. This is marked by hearts appearing above its head the next turn accompanied by the sound of a music box.</p>
 
-      <p>As '<span class="hardcover">Nostalgic Embrace of the Old Days</span>' starts with a Cost of 5 {Light} and {abnoName} only has a maximum of 2 {Light}, it will be unable to use this attack until it has clashed at least 3 times. It is best to ignore Teddy's attacks, only clashing when absolutely necessary. Due to its high Speed its attacks cannot be redirected, meaning the targetted Librarian will need to to endure the hits while their ally performs one-sided attacks against the teddy.</p>
+      <p>As '<span class="hardcover">Nostalgic Embrace of the Old Days</span>' starts with a Cost of 5 {Light} and {abnoName} only has a maximum of 2 {Light}, it will be unable to use this attack until it has clashed at least 3 times. It is best to ignore Teddy's attacks, only clashing when absolutely necessary. Due to its high Speed its attacks cannot be redirected, meaning the targetted librarian will need to to endure the hits while their ally performs one-sided attacks against the teddy.</p>
 
       <h5 class="profile-subheader">Decks & Pages</h5>
 
