--- a/abnoinfo/Little Helper.html
+++ b/abnoinfo/Little Helper.html
@@ -36,7 +36,7 @@
       <h5 class="profile-subheader">Managerial Guidelines</h5>
       <ul>
         <li>When the work result was {Normal}, the Qliphoth Counter decreased with a normal probability.</li>
-        <li>When the work result was {Bad}, the Qliphoth Counter decreased with with a high probability.</li>
+        <li>When the work result was {Bad}, the Qliphoth Counter decreased with a high probability.</li>
       </ul>
 
       <h5 class="profile-subheader">Abnormality Story</h5>
