--- a/abnoinfo/Porccubus.html
+++ b/abnoinfo/Porccubus.html
@@ -177,7 +177,7 @@
                     <span class="lor-page-stats">{Melee} | 3 {Light}</span>
                   </div>
                   <div class="lor-page-text">
-                    <i>(Given to Librarians)</i><br>
+                    <i>(Given to librarians)</i><br>
                     This page is exhausted on use<br>
                     {Slash Dice} {dmgroll 1 10}<br>
                     {Pierce Dice} {dmgroll 1 10}<br>
