--- a/abnoinfo/Scorched Girl.html
+++ b/abnoinfo/Scorched Girl.html
@@ -35,7 +35,7 @@
       <h5 class="profile-subheader">Managerial Guidelines</h5>
       <ul>
         <li>When the work result was {Normal}, the Qliphoth Counter decreased with a normal probability.</li>
-        <li>When the work result was {Bad}, the Qliphoth Counter decreased with with a high probability.</li>
+        <li>When the work result was {Bad}, the Qliphoth Counter decreased with a high probability.</li>
         <li>During its breach, {abnoName} exploded after 5 seconds of encountering the target employee. Many employees nearby sustained burns from the incident.</li>
       </ul>
 
