--- a/abnoinfo/Spider Bud.html
+++ b/abnoinfo/Spider Bud.html
@@ -108,9 +108,9 @@
 
       <p>{abnoName} appears as the third Abnormality on the {Floor of Literature}, unlocking {Awakening Cocoon}, {Awakening Meal}, and {Awakening Alertness} after its suppression.</p>
 
-      <p>In its book, {abnoName} is accompanied by four Spiderlings. It intially starts as inactive and untargetable, being out of reach, while the Spiderlings attack the Librarians for nutrition. When a Spiderling is killed, {abnoName} becomes active which also makes it susceptible to damage. It will target the Librarian that dealt the killing blow to the Spiderling with '<span class="hardcover">Catching Food</span>'. This is a high rolling attack that can be difficult to counter.</p>
+      <p>In its book, {abnoName} is accompanied by four Spiderlings. It intially starts as inactive and untargetable, being out of reach, while the Spiderlings attack the librarians for nutrition. When a Spiderling is killed, {abnoName} becomes active which also makes it susceptible to damage. It will target the librarian that dealt the killing blow to the Spiderling with '<span class="hardcover">Catching Food</span>'. This is a high rolling attack that can be difficult to counter.</p>
 
-      <p>When a Librarian is hit by '<span class="hardcover">Catching Food</span>', they are inflicted with the {LoR SE d Cocoon} status for the next turn. With this status, the Librarian will become Staggered and all Spiderlings will target them. The Spiderlings also have the ability to inflict a heavy amount of {LoR SE d Bind} on to targets '<span class="hardcover">Thin Webbing</span>', which can prevent Librarians from redirecting the Spiderlings' attacks to protect their cocooned ally.</p>
+      <p>When a librarian is hit by '<span class="hardcover">Catching Food</span>', they are inflicted with the {LoR SE d Cocoon} status for the next turn. With this status, the librarian will become Staggered and all Spiderlings will target them. The Spiderlings also have the ability to inflict a heavy amount of {LoR SE d Bind} on to targets '<span class="hardcover">Thin Webbing</span>', which can prevent librarians from redirecting the Spiderlings' attacks to protect their cocooned ally.</p>
 
       <h5 class="profile-subheader">Decks & Pages</h5>
 
