Queen Bee's page

--- a/abnoinfo/Funeral of the Dead Butterflies.html
+++ b/abnoinfo/Funeral of the Dead Butterflies.html
@@ -23,7 +23,7 @@
       <p>In containment, {abnoName} deals 4-6 {WHITE} damage and produces a maximum of 16 {E-Boxes}.<br>Its responses to the four work orders are as follows:<br>{Repression} (High) > {Insight} (Common) > {Instinct} (Very Low) > {Attachment} (Very Low).<br>
       Its preferences are slightly different for lower level agents, where {Repression} has a Very Low success rate while {Instinct} offers a Common success rate.</p>
 
-      <p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment. It will roam around the facility, 'shooting out' butterflies from its fingers at its targets. It will also occasionally set down its coffin in front of it and open it, causing a seemingly endless amount of butterflies to fly out. These butterflies reach all the way to the end of the room, causing continuous {WHITE} damage to anyone caught in the attack.</p>
+      <p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment. It will roam around the facility, 'firing' butterflies from its fingers at its targets (described as making them bloom out of thin air). It will also occasionally set down its coffin in front of it and open it, causing a seemingly endless amount of butterflies to fly out. These butterflies reach all the way to the end of the room, causing continuous {WHITE} damage to anyone caught in the attack.</p>
 
       <h5 class="profile-subheader">Managerial Guidelines</h5>
       <ul>
@@ -382,7 +382,7 @@
         <li class="red-text">"A single coffin to pay tribute to those who have nowhere to go, carrying the memory of an empty faith…"</li>
         <li class="red-text">"I’ll help liberate you from tormenting yourselves."</li>
         <li class="red-text">"For you poor souls who cannot stop grieving… I offer my condolences."</li>
-        <li class="red-text">Not a single flower blooms to honour the butterflies.</li>
+        <li class="red-text">"Not a single flower blooms to honour the butterflies."</li>
         <span class="quote-cond">When using 'Lament':</span>
         <li class="red-text">"What happens when people die?"</li>
         <li class="red-text">"Grief for the dead, and early lament for the living."</li>
