--- a/abnoinfo/Little Helper.html
+++ b/abnoinfo/Little Helper.html
@@ -117,7 +117,7 @@
 
       <p>In its book, there are three {abnoName}s present, all of which are in cleaning mode. Its strategy involves using '<span class="hardcover">Charge</span>' to gain 4 {LoR SE b Strength} to boost the power of '<span class="hardcover">Clean</span>'.</p>
       
-      <p>With the additional power, '<span class="hardcover">Clean</span>' becomes able to deal 10 damage to the opponent. This activates its passive 'Repetitive Pattern-Recognition' which generates extra {Light}, enabling it to use '<span class="hardcover">Clean</span>' the following turn as well.</p>
+      <p>With the additional power, '<span class="hardcover">Clean</span>' becomes able to deal 10 damage to the opponent. This activates its passive 'Repetitive Pattern-Recognition' which generates extra {Light}, enabling it to use '<span class="hardcover">Clean</span>' the following turn as well.</p><br><br>
 
       <h5 class="profile-subheader">Decks & Pages</h5>
 
