Red Shoes' page

--- a/abnoinfo/Spider Bud.html
+++ b/abnoinfo/Spider Bud.html
@@ -49,7 +49,7 @@
         Thank you for sharing your opinion, however our own research indicates that your concerns are unlikely to be true. Furthermore, it has been proven that the presence of a cocoon inside the containment unit increases the energy output. For these reasons we will implement a rescue procedure for the employees caught by {abnoName}, as this goes against out interests. However, we will allocate more resources into the research of this Abnormality in the future as per your suggestion. Please be advised that your actions go against the code of conduct and are subject to penalties including dismissal. Lobotomy Corporation always values the wellfare and voice of its employees.<br>- Head of the Welfare Department, Lobotomy Corporation</p>
 
         <p>There's an eerie rumour spreading among employees. It's not surprising for rumours to spread in a company such as this, but it's interesting that the number of alleged witnesses seems to multiply. Following are some of the rumours that are circulating:<br>
-        “Whispers can be heard in the containment unit at night”<br>
+        “Whispers can be heard in the containment unit at night.”<br>
         “It was the voice of Alex, who went missing a few days ago…”<br>
         “They say the voice was weeping in terror, begging to be saved from the darkness.”</p>
       </div><br>
