--- a/abnoinfo/Queen Bee.html
+++ b/abnoinfo/Queen Bee.html
@@ -7,7 +7,7 @@
       <p><b>{abnoName}</b> is a combination of a bee hive and the queen bee. It has large yellow body with black stripes segmented into four tiers. A cross-section of the insides are visible at the base of each tier, showing that the Abnormality is pieced together by several pieces of cut meat. It lacks limbs and as a result is incapable of movement. It has two sets of tattered insect wings, but it is incapable of flight.<br>
       The head is horrible disfigured, giving it three mouths, with sharp teeth present in the gaps. It possesses a pair of crumpled antennae and a single blue eye.</p>
 
-      <p>{abnoName} is capable of producing a cloud of spores which contain eggs for its drones. When an individual inhales the spores, the egg will hatch and the larva feeds on the host from the inside. Once the larva grows too big, it bursts out from the host's neck, severing their head from the body. </p>
+      <p>{abnoName} is capable of producing a cloud of spores which contain eggs for its drones. When an individual inhales the spores, the egg will hatch and the larva feeds on the host from the inside. Once the larva grows too big, it bursts out from the host's neck, severing their head from the body.</p>
 
       <p>The drones, or Worker Bees, are taller than a human. Unlike their queen, they possess three sets of legs as well as a pair of arms, and are capable of movement. Its head lacks eyes and has an exposed jaw lined with large, sharp teeth that it uses to smash the head of its targets. The Worker Bees are loyal to {abnoName} and will harvest flesh to help the queen grow for the prosperity of their kingdom.</p>
     </section>
@@ -16,11 +16,9 @@
       <h3 class="profile-header">Lobotomy Corporation</h3>
       <hr class="header-seperator">
 
-      <div class="page-img-container bottom-gap">
+      <div class="page-img-container">
         <a class="display-img" href="../images/abnos/Queen Bee/LC Idle.png" data-lightbox="LC" data-title="{abnoName}"><img class="page-img" src="../images/abnos/Queen Bee/LC Idle.png"/></a>
-        <div class="caption bottom-gap">{abnoName} in<br>Lobotomy Corporation</div>
-        <a class="display-img" href="../images/abnos/Queen Bee/Worker/LC Idle.png" data-lightbox="LC" data-title="Worker Bee"><img class="page-img" style="height: 180px;" src="../images/abnos/Queen Bee/Worker/LC Idle.png"/></a>
-        <div class="caption">A Worker Bee</div>
+        <div class="caption">{abnoName} in<br>Lobotomy Corporation</div>        
       </div>
       
       <p>In containment, {abnoName} deals 4-6 {RED} damage and produces a maximum of 22 {E-Boxes}.<br>Its responses to the four work orders are as follows:<br>{Insight} (High) > {Instinct} (Common) > {Attachment} (Common) > {Repression} (Very Low).<br>
@@ -59,9 +57,9 @@
         It had no eyes, but it seemed to be aware of me. But instead of attacking me, it picked up &lt;Redacted&gt;'s head and started for the containment unit, like a drone carrying honey…<br>
         Sometimes I still hear the sound of its jaws rattling, and its wings fluttering.</p>
 
-        <p>&lt;Worker Bee&gt;</p>
+        <p>&lt;Worker Bee&gt;<br>
         Thought to be a member of the same species as the {abnoName}, its form is very different from the queen aside from colour. It has eight legs and limited flying capabilities that only allow it to hover approximately 1 hour above the ground. The head, thorax, and abdomen can be easily distinguished. Unlike the queen, it does not have eyes or antennae. Something resembling an intestine drags behind at the end of its tail.<br>
-        They only show two types of behaviour: Delivering nutrients to the queen, or proliferating. When encountering an employee, it attacks the head with its jaws, smashing it and inserting a larva into the victim.
+        They only show two types of behaviour: Delivering nutrients to the queen, or proliferating. When encountering an employee, it attacks the head with its jaws, smashing it and inserting a larva into the victim.</p>
       </div><br>
 
       <h5 class="profile-subheader">Work Quotes</h5>
@@ -220,7 +218,7 @@
                     <span class="lor-page-stats">{Melee} | 2 {Light}</span>
                   </div>
                   <div class="lor-page-text">
-                    {Slash Dice} {dmgroll 5 9} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">Quen Bee recovers 10 HP</span><br>
+                    {Slash Dice} {dmgroll 5 9} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">Queen Bee recovers 10 HP</span><br>
                     {Evade Dice} {defroll 3 10}
                   </div>
                 </div>
@@ -341,7 +339,7 @@
               <td>
                 <ul class="abno-page-quote-list">
                   <li>To bring my kingdom to greatness… I need more bees…</li>
-                  <li>Take one last look at the blue sky while you can.</li>
+                  <li>Take one last look at the blue sky while you still can.</li>
                 </ul>
               </td>
             </tr>
@@ -406,6 +404,8 @@
       <div class="abno-gallery">
         <a class="display-img" href="../images/abnos/Queen Bee/LC Idle.png" data-lightbox="gallery" data-title="Idle Sprite<br>(Lobotomy Corporation)"><img class="gallery-img" src="../images/abnos/Queen Bee/LC Idle.png"/></a>
         <a class="display-img" href="../images/abnos/Queen Bee/LoR Idle.png" data-lightbox="gallery" data-title="Idle Sprite<br>(Library of Ruina)"><img class="gallery-img" src="../images/abnos/Queen Bee/LoR Idle.png"/></a>
+        <a class="display-img" href="../images/abnos/Queen Bee/Worker/LC Idle.png" data-lightbox="gallery" data-title="Worker Bee<br>(Lobotomy Corporation)"><img class="gallery-img" src="../images/abnos/Queen Bee/Worker/LC Idle.png"/></a>
+        <a class="display-img" href="../images/abnos/Queen Bee/Worker/LoR Idle.png" data-lightbox="gallery" data-title="Worker Bee<br>(Library of Ruina)"><img class="gallery-img" src="../images/abnos/Queen Bee/Worker/LoR Idle.png"/></a>
         <a class="display-img" href="../images/abnos/Queen Bee/LoR Spores.png" data-lightbox="gallery" data-title="Spores"><img class="gallery-img" src="../images/abnos/Queen Bee/LoR Spores.png"/></a>
         <a class="display-img" href="../images/abnos/Queen Bee/LoR Worker Bee.png" data-lightbox="gallery" data-title="Worker Bee"><img class="gallery-img" src="../images/abnos/Queen Bee/LoR Worker Bee.png"/></a>
         <a class="display-img" href="../images/abnos/Queen Bee/LoR Loyalty.png" data-lightbox="gallery" data-title="Loyalty"><img class="gallery-img" src="../images/abnos/Queen Bee/LoR Loyalty.png"/></a>
