--- a/abnoinfo/Laetitia.html
+++ b/abnoinfo/Laetitia.html
@@ -6,7 +6,8 @@
     <section class="abno-intro">
       <p><b>{abnoName}</b>, also known as Wee Witch, is a doll resembling a little girl. It wears a frilled red and white lolita-style dress, with a big red bow, red boots, and a red bonnet. A pair of jingle bells are tied behind its head, hanging below its short grey hair. Being a doll, its movement is mechanical. A music box can often be heard when near it.</p>
 
-      <p>{abnoName}'s main desires are to make friends and spread joy and laughter. When it finds a person to be gloom, {abnoName} will gift them a hand-made heart-shaped present. However the gift secretly contains one of {abnoName}'s friends, a Wee Witch's Friend. The Friend is a large black spider-like monster with several eyes bulging in various directions. It has four legs each painted in a variety of colours, as well as a fifth claw-like limb. Unlike {abnoName}, the Wee Witch's Friend is hostile and at some point will burst out from the gift in a small explosion.</p>
+      <p>{abnoName}'s main desires are to make friends and spread joy and laughter. When it finds a person to be gloom, {abnoName} will gift them a hand-made heart-shaped present. However the gift secretly contains one of {abnoName}'s friends, a Wee Witch's Friend. After an amount of time, the gift will burst with a small explosion and the Friend will burst out from the the giftee's chest.<br>
+      The Wee Witch's Friend is a large black spider-like monster with several eyes bulging in various directions. It has four legs each painted in a variety of colours, as well as a fifth claw-like limb. Unlike {abnoName}, the Wee Witch's Friend is hostile.</p>
 
       <p>While the intention of this prank is to simply cause surprise and laughter, the bursting of the gift is usually fatal and the resulting Friend will begin attacking anyone nearby.</p>
     </section>
